--- a/Compiler42/MainWindow.xaml
+++ b/Compiler42/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Compiler42"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+	<Grid>
+		<WindowsFormsHost x:Name="glHost" Margin="18,24,138,89" RenderTransformOrigin="0.5,0.5"/>
+	</Grid>
 </Window>
