--- a/Compiler42/MainWindow.xaml
+++ b/Compiler42/MainWindow.xaml
@@ -10,7 +10,9 @@
 		PreviewKeyDown="Window_PreviewKeyDown"
 
         Title="MainWindow" Height="450" Width="800">
-	<Grid>
+	<Grid x:Name="Grid1">
 		<WindowsFormsHost x:Name="glHost" Margin="18,21,138,92" RenderTransformOrigin="0.5,0.5" MinWidth="100" MinHeight="100" IsEnabled="False"/>
+		<Label x:Name="Label1" Content="Label" HorizontalAlignment="Left" Margin="568,241,0,0" VerticalAlignment="Top"/>
 	</Grid>
+	
 </Window>
