複数画面の干渉防止

--- a/Compiler42/MainWindow.xaml
+++ b/Compiler42/MainWindow.xaml
@@ -49,6 +49,7 @@
 					<MenuItem Header="Texture"/>
 					<MenuItem Header="Material"/>
 					<MenuItem Header="Object"/>
+					<MenuItem Header="Bot"/>
 				</MenuItem>
 				<MenuItem Header="Setting">
 					<MenuItem Header="Draw Setting..."/>
